<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>org.avaje</groupId>
    <artifactId>java11-oss</artifactId>
    <version>4.5</version>
  </parent>

  <groupId>io.avaje</groupId>
  <artifactId>avaje-jex-parent</artifactId>
  <version>3.0-RC1</version>
  <packaging>pom</packaging>

  <scm>
    <developerConnection>scm:git:git@github.com:avaje/avaje-jex.git</developerConnection>
    <tag>avaje-jex-parent-2.5</tag>
  </scm>

  <properties>
    <nexus.staging.autoReleaseAfterClose>true</nexus.staging.autoReleaseAfterClose>
    <jackson.version>2.18.1</jackson.version>
    <surefire.useModulePath>false</surefire.useModulePath>
    <maven.compiler.release>21</maven.compiler.release>
    <project.build.outputTimestamp>2024-11-26T19:40:11Z</project.build.outputTimestamp>
  </properties>

  <modules>
    <module>avaje-jex</module>
    <module>avaje-jex-test</module>
    <module>avaje-jex-freemarker</module>
    <module>avaje-jex-mustache</module>
    <module>avaje-jex-htmx</module>
  </modules>

  <dependencies>

    <!-- test dependencies -->
    <dependency>
      <groupId>io.avaje</groupId>
      <artifactId>junit</artifactId>
      <version>1.5</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>io.avaje</groupId>
      <artifactId>avaje-http-client</artifactId>
      <version>2.8</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>io.avaje</groupId>
      <artifactId>avaje-spi-service</artifactId>
      <version>2.8</version>
      <scope>provided</scope>
    </dependency>

  </dependencies>

  <profiles>
    <profile>
      <id>central</id>
    </profile>
    <profile>
      <id>default</id>
      <activation>
        <activeByDefault>true</activeByDefault>
      </activation>
      <modules>
        <module>examples</module>
      </modules>
    </profile>
  </profiles>
</project>
